feat: add grid for mobile

--- a/src/index.html
+++ b/src/index.html
@@ -3,9 +3,93 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="css/style.css">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Memory Game</title>
   </head>
   <body>
+    <!-- MAIN GRID -->
+    <main class="main-grid">
+      <!-- Card 01 -->
+      <div class="cards">
+        <div class="card-front"></div>
+        <div class="card-back"></div>
+      </div>
+      <!-- Card 02 -->
+      <div class="cards">
+        <div class="card-front"></div>
+        <div class="card-back"></div>
+      </div>
+      <!-- Card 03 -->
+      <div class="cards">
+        <div class="card-front"></div>
+        <div class="card-back"></div>
+      </div>
+      <!-- Card 04 -->
+      <div class="cards">
+        <div class="card-front"></div>
+        <div class="card-back"></div>
+      </div>
+      <!-- Card 05 -->
+      <div class="cards">
+        <div class="card-front"></div>
+        <div class="card-back"></div>
+      </div>
+      <!-- Card 06 -->
+      <div class="cards">
+        <div class="card-front"></div>
+        <div class="card-back"></div>
+      </div>
+      <!-- Card 07 -->
+      <div class="cards">
+        <div class="card-front"></div>
+        <div class="card-back"></div>
+      </div>
+      <!-- Card 08 -->
+      <div class="cards">
+        <div class="card-front"></div>
+        <div class="card-back"></div>
+      </div>
+      <!-- Card 09 -->
+      <div class="cards">
+        <div class="card-front"></div>
+        <div class="card-back"></div>
+      </div>
+      <!-- Card 10 -->
+      <div class="cards">
+        <div class="card-front"></div>
+        <div class="card-back"></div>
+      </div>
+      <!-- Card 11 -->
+      <div class="cards">
+        <div class="card-front"></div>
+        <div class="card-back"></div>
+      </div>
+      <!-- Card 12 -->
+      <div class="cards">
+        <div class="card-front"></div>
+        <div class="card-back"></div>
+      </div>
+      <!-- Card 13 -->
+      <div class="cards">
+        <div class="card-front"></div>
+        <div class="card-back"></div>
+      </div>
+      <!-- Card 14 -->
+      <div class="cards">
+        <div class="card-front"></div>
+        <div class="card-back"></div>
+      </div>
+      <!-- Card 15 -->
+      <div class="cards">
+        <div class="card-front"></div>
+        <div class="card-back"></div>
+      </div>
+      <!-- Card 16 -->
+      <div class="cards">
+        <div class="card-front"></div>
+        <div class="card-back"></div>
+      </div>
+    </main>
 
     <script src="js/script.js"></script>
   </body>
