feat: add elements around the grid

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,23 @@
     <title>Memory Game</title>
   </head>
   <body>
+    <!-- MAIN HEADER -->
+    <header class="main-header">
+      <h1>Matching Game</h1>
+    </header>
+    <!-- SECTION: INFOS -->
+    <section class="infos">
+      <!-- Stars -->
+      <div class="stars"></div>
+      <!-- Moves -->
+      <div class="moves"></div>
+      <!-- Player -->
+      <div class="player"></div>
+      <!-- Score -->
+      <div class="score"></div>
+      <!-- Reset -->
+      <div class="reset"></div>
+    </section>
     <!-- MAIN GRID -->
     <main class="main-grid">
       <!-- Card 01 -->
