feat: add win popup

--- a/src/index.html
+++ b/src/index.html
@@ -30,6 +30,11 @@
         <input type="reset" value="reset">
       </form>
     </section>
+    <!-- WIN POPUP -->
+    <section class="win-popup">
+      <h2>You won!</h2>
+      <button>Restart Game</button>
+    </section>
     <!-- MAIN HEADER -->
     <header class="main-header">
       <h1>Matching Game</h1>
