feat: add timer section

--- a/src/index.html
+++ b/src/index.html
@@ -49,6 +49,8 @@
       <div class="player"></div>
       <!-- Score -->
       <div class="score"></div>
+      <!-- Timer -->
+      <div class="timer"></div>
       <!-- Reset -->
       <div class="reset"></div>
     </section>
