feat: add click event on the grid with delegation

--- a/src/index.html
+++ b/src/index.html
@@ -55,87 +55,87 @@
       <div class="reset"></div>
     </section>
     <!-- MAIN GRID -->
-    <main class="main-grid">
+    <main class="main-grid" id="grid">
       <!-- Card 01 -->
-      <div class="cards">
+      <article class="cards">
         <div class="card-front"></div>
         <div class="card-back"></div>
-      </div>
+      </article>
       <!-- Card 02 -->
-      <div class="cards">
+      <article class="cards">
         <div class="card-front"></div>
         <div class="card-back"></div>
-      </div>
+      </article>
       <!-- Card 03 -->
-      <div class="cards">
+      <article class="cards">
         <div class="card-front"></div>
         <div class="card-back"></div>
-      </div>
+      </article>
       <!-- Card 04 -->
-      <div class="cards">
+      <article class="cards">
         <div class="card-front"></div>
         <div class="card-back"></div>
-      </div>
+      </article>
       <!-- Card 05 -->
-      <div class="cards">
+      <article class="cards">
         <div class="card-front"></div>
         <div class="card-back"></div>
-      </div>
+      </article>
       <!-- Card 06 -->
-      <div class="cards">
+      <article class="cards">
         <div class="card-front"></div>
         <div class="card-back"></div>
-      </div>
+      </article>
       <!-- Card 07 -->
-      <div class="cards">
+      <article class="cards">
         <div class="card-front"></div>
         <div class="card-back"></div>
-      </div>
+      </article>
       <!-- Card 08 -->
-      <div class="cards">
+      <article class="cards">
         <div class="card-front"></div>
         <div class="card-back"></div>
-      </div>
+      </article>
       <!-- Card 09 -->
-      <div class="cards">
+      <article class="cards">
         <div class="card-front"></div>
         <div class="card-back"></div>
-      </div>
+      </article>
       <!-- Card 10 -->
-      <div class="cards">
+      <article class="cards">
         <div class="card-front"></div>
         <div class="card-back"></div>
-      </div>
+      </article>
       <!-- Card 11 -->
-      <div class="cards">
+      <article class="cards">
         <div class="card-front"></div>
         <div class="card-back"></div>
-      </div>
+      </article>
       <!-- Card 12 -->
-      <div class="cards">
+      <article class="cards">
         <div class="card-front"></div>
         <div class="card-back"></div>
-      </div>
+      </article>
       <!-- Card 13 -->
-      <div class="cards">
+      <article class="cards">
         <div class="card-front"></div>
         <div class="card-back"></div>
-      </div>
+      </article>
       <!-- Card 14 -->
-      <div class="cards">
+      <article class="cards">
         <div class="card-front"></div>
         <div class="card-back"></div>
-      </div>
+      </article>
       <!-- Card 15 -->
-      <div class="cards">
+      <article class="cards">
         <div class="card-front"></div>
         <div class="card-back"></div>
-      </div>
+      </article>
       <!-- Card 16 -->
-      <div class="cards">
+      <article class="cards">
         <div class="card-front"></div>
         <div class="card-back"></div>
-      </div>
+      </article>
     </main>
 
     <script src="js/script.js"></script>
