feat: add hidden class

--- a/src/index.html
+++ b/src/index.html
@@ -8,9 +8,9 @@
   </head>
   <body>
     <!-- OVERLAY -->
-    <div class="overlay"></div>
+    <div class="overlay hidden"></div>
     <!-- START POPUP -->
-    <section class="start-popup">
+    <section class="start-popup hidden">
       <form class="start-form" action="#" method="post">
         <!-- Players -->
         <fieldset>
@@ -31,7 +31,7 @@
       </form>
     </section>
     <!-- WIN POPUP -->
-    <section class="win-popup">
+    <section class="win-popup hidden">
       <h2>You won!</h2>
       <button>Restart Game</button>
     </section>
