feat: hide overlay and start popup when submit

--- a/src/index.html
+++ b/src/index.html
@@ -8,9 +8,9 @@
   </head>
   <body>
     <!-- OVERLAY -->
-    <div class="overlay"></div>
+    <div id="overlay" class="overlay"></div>
     <!-- START POPUP -->
-    <section class="start-popup">
+    <section id="start-popup" class="start-popup">
       <form id="form-start" class="start-form" action="#" method="post">
         <!-- Players -->
         <fieldset>
