feat: add overlay

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,8 @@
     <title>Memory Game</title>
   </head>
   <body>
+    <!-- OVERLAY -->
+    <section class="overlay"></section>
     <!-- WIN POPUP -->
     <section class="win-popup hidden">
       <h2>You won!</h2>
