feat: popup opens when win game

--- a/src/index.html
+++ b/src/index.html
@@ -8,9 +8,9 @@
   </head>
   <body>
     <!-- OVERLAY -->
-    <section class="overlay"></section>
+    <section class="overlay hidden" id="overlay"></section>
     <!-- WIN POPUP -->
-    <section class="win-popup hidden">
+    <section class="win-popup hidden" id="win-popup">
       <h2>You won!</h2>
       <button>Restart Game</button>
     </section>
