feat: restart game button after winning

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
     <!-- WIN POPUP -->
     <section class="win-popup hidden" id="win-popup">
       <h2>You won!</h2>
-      <button>Restart Game</button>
+      <button id="reload">Restart Game</button>
     </section>
     <!-- MAIN HEADER -->
     <header class="main-header">
