feat: allow to reset or reload game

--- a/src/index.html
+++ b/src/index.html
@@ -31,7 +31,9 @@
       <!-- Timer -->
       <div class="timer"></div>
       <!-- Reset -->
-      <div class="reset"></div>
+      <div class="reset">
+        <button id="reset">Reset</button>
+      </div>
     </section>
     <!-- MAIN GRID -->
     <main class="main-grid" id="grid">
