feat: add star rating

--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,7 @@
     <!-- WIN POPUP -->
     <section class="win-popup hidden" id="win-popup">
       <h2>You won!</h2>
+      <p id="info-game"></p>
       <button id="reload">Restart Game</button>
     </section>
     <!-- MAIN HEADER -->
@@ -21,7 +22,7 @@
     <!-- SECTION: INFOS -->
     <section class="infos">
       <!-- Stars -->
-      <div class="stars"></div>
+      <div class="stars" id="stars"></div>
       <!-- Moves -->
       <div class="moves"></div>
       <!-- Player -->
