feat: display reset + stars + moves info

--- a/src/index.html
+++ b/src/index.html
@@ -24,13 +24,7 @@
       <!-- Stars -->
       <div class="stars" id="stars"></div>
       <!-- Moves -->
-      <div class="moves"></div>
-      <!-- Player -->
-      <div class="player"></div>
-      <!-- Score -->
-      <div class="score"></div>
-      <!-- Timer -->
-      <div class="timer"></div>
+      <div class="moves" id="moves"></div>
       <!-- Reset -->
       <div class="reset">
         <button id="reset">Reset</button>
