feat: add start game popup / button

--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,12 @@
   </head>
   <body>
     <!-- OVERLAY -->
-    <section class="overlay hidden" id="overlay"></section>
+    <section class="overlay" id="overlay"></section>
+    <!-- START GAME POPUP -->
+    <section class="start-game-popup" id="start-game-popup">
+      <h3>Welcome to the matching game</h3>
+      <button id="start-game-btn">Start</button>
+    </section>
     <!-- WIN POPUP -->
     <section class="win-popup hidden" id="win-popup">
       <h2>You won!</h2>
