feat: add timer

--- a/src/index.html
+++ b/src/index.html
@@ -34,6 +34,10 @@
       <div class="reset">
         <button id="reset">Reset</button>
       </div>
+      <!-- Timer -->
+      <div class="timer">
+        <p id="visual-timer"></p>
+      </div>
     </section>
     <!-- MAIN GRID -->
     <main class="main-grid" id="grid">
