feat: style start game popup

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
     <section class="overlay" id="overlay"></section>
     <!-- START GAME POPUP -->
     <section class="start-game-popup" id="start-game-popup">
-      <h3>Welcome to the matching game</h3>
+      <h3>Welcome Adventurer!</h3>
       <button id="start-game-btn">Start</button>
     </section>
     <!-- WIN POPUP -->
