feat: style win popup

--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,7 @@
     <section class="win-popup hidden" id="win-popup">
       <h2>You won!</h2>
       <p id="info-game"></p>
+      <p id="timer-game"></p>
       <button id="reload">Restart Game</button>
     </section>
     <!-- MAIN HEADER -->
